minor spacing fixes

--- a/css/style.css
+++ b/css/style.css
@@ -41,7 +41,7 @@ html {
   /* We want it to be 10px, so, 16/62.5 = 10 */
   /* rem also defines font-size */
   font-size: 62.5%; }
-  @media (min-width: 112.5em) {
+  @media (min-width: 125em) {
     html {
       font-size: 75%; } }
   @media (max-width: 75em) {
@@ -147,6 +147,9 @@ body {
 
 .u-margin-top-huge {
   margin-top: 10rem !important; }
+  @media (max-width: 56.25em) {
+    .u-margin-top-huge {
+      margin-top: 0 !important; } }
 
 .bg-video {
   position: absolute;
@@ -268,6 +271,7 @@ body {
     transform: scale(0.95); }
 
 .feature-box {
+  min-height: 31rem;
   background-color: rgba(32, 32, 32, 0.9);
   font-size: 1.6rem;
   padding: 2.5rem;
@@ -277,7 +281,8 @@ body {
   transition: transform 0.3s; }
   @media (max-width: 56.25em) {
     .feature-box {
-      padding: 2rem; } }
+      padding: 2rem;
+      min-height: 15rem; } }
   .feature-box__icon {
     font-size: 4.5rem;
     margin-bottom: 0.5rem;
@@ -879,10 +884,10 @@ body {
   background-color: #202020;
   color: #ffffff;
   font-size: 1.3rem;
-  padding: 8rem 0; }
+  padding: 2rem 0; }
   @media (max-width: 56.25em) {
     .footer {
-      padding: 4rem 0; } }
+      padding: 0; } }
   .footer__logo-box {
     text-align: center;
     margin-bottom: 2rem; }
@@ -951,7 +956,7 @@ body {
 
 .section-experience {
   background-color: #202020;
-  padding: 25rem 0 15rem 0;
+  padding: 25rem 0 10rem 0;
   margin-top: -12rem; }
   @media (max-width: 56.25em) {
     .section-experience {
