--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -2,10 +2,10 @@
     background-color: $color-grey-soft;
     color: $color-white;
     font-size: $default-font-size-smaller;
-    padding: 8rem 0;
+    padding: 2rem 0;
 
     @include responsive(tablet) {
-        padding: 4rem 0;
+        padding: 0;
     }
 
     &__logo-box {
