--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -42,7 +42,7 @@
 
 .section-experience {
   background-color: $color-grey-soft;
-  padding: 25rem 0 15rem 0;
+  padding: 25rem 0 10rem 0;
   margin-top: -12rem;
 
   @include responsive(tablet) {
